[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blog2md"
version = "0.1.0"
description = "Convert blog HTML and supported blog URLs to Markdown"
readme = "README.md"
requires-python = ">=3.8,<3.15"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

